--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
 	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-	<script>
-	  	// Initialize Firebase
-	  	var config = {
-	    apiKey: "AIzaSyAHL1gUv1RYc-YWV1zK72UDW29r1lVV1K4",
-	    authDomain: "foupon-6c9dd.firebaseapp.com",
-	    databaseURL: "https://foupon-6c9dd.firebaseio.com",
-	    projectId: "foupon-6c9dd",
-	    storageBucket: "foupon-6c9dd.appspot.com",
-	    messagingSenderId: "774072237770"
-	  	};
-	  	firebase.initializeApp(config);
-	</script>
-
 	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -41,26 +28,19 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title"><strong>Add username</strong></h3>
-				</div>
-				<div class="panel-body">
-					<form>
-						<div class="form-group">
-							<label for="userName">Username</label>
-							<input type="text" class="form-control" id="trainName">
-						</div>
-						<div class="form-group">
-							<label for="emailAddress">Email Address</label>
-							<input type="text" class="form-control" id="Destination">
-						</div>	
-						<div class="form-group">
-							<label for="password">Password</label>
-							<input type="number" class="form-control" id="trainInputTime">
-						
-						<button id="addUser" type="submit" class="btn btn-primary">Submit</button>
-					</form>
+				<div class="container">
+					<input id="txtEmail" type="email" placeholder="Email">
 
+					<input id="txtPassword" type="password" placeholder="Password">
+
+					<button id="btnLogin" class="btn btn-action">Log In </button>
+
+					<button id= "btnSignUp" class="btn btn- secondary">Sign Up</button>
+
+					<button id= "btnLogout" class="btn btn- action hide">Log Out</button>
+
+
+				
 				</div>
 			</div>
 		</div>	
