--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="profile.html">Profile</a></li>
                         <li><a href="main.html">Search</a></li>
                     </ul>
