extra body tag and added js src

--- a/profile.html
+++ b/profile.html
@@ -13,8 +13,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
 </head>
-
-<body>
     <body>
     <div class="container">
         <nav class="navbar navbar-default">
@@ -56,4 +54,5 @@
             </div>
         </div>
     </div>
+    <script src="assets/javascript/app.js"></script>
 </body>
