--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div>
-                        <button class=" sign-in btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                        <button class=" sign-in btn btn-lg btn-primary btn-block" type="submit" id="submitButton">Sign in</button>
                     </form>
                 </div>
             </div>
@@ -63,4 +63,5 @@
         </div>
     </div>
     </div>
+<script src="assets/javascript/app.js"></script>
 </body>
