--- a/main.html
+++ b/main.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
-<body>
-
     <body>
         <div class="container">
             <nav class="navbar navbar-default">
@@ -73,4 +70,5 @@
                 <div class="col-md-2 col-sm-2 col-xs-1"></div>
             </div>
         </div>
+    <script src="assets/javascript/app.js"></script>
     </body>
