google places api

--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
                         <div id="searchbar" class="row">
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
                             <div class="input-group col-lg-12 col-md-10 col-sm-10 col-xs-10">
-                                <input type="text" class="form-control input-lg" placeholder="burritos, cheap food, Tony's" />
+                                <input type="text" class="form-control input-lg" id="search-input" placeholder="burritos, cheap food, Tony's" />
                                 <span class="input-group-btn">
                                     <button type="button" class="btn btn-default dropdown-toggle as-is bs-dropdown-to-select" data-toggle="dropdown">
                                         <span data-bind="bs-drp-sel-label">Select...</span>
@@ -58,7 +58,7 @@
                                         <li data-value="2"><a href="#">Los Angeles</a></li>
                                         <li data-value="3"><a href="#">San Francisco</a></li>
                                     </ul>
-                                    <button class="btn btn-info btn-lg" type="button">
+                                    <button class="btn btn-info btn-lg" type="button" id="submitButton">
                                           <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
