--- a/main.html
+++ b/main.html
@@ -61,6 +61,7 @@
                                     <button class="btn btn-info btn-lg" type="button" id="submitButton">
                                           <i class="glyphicon glyphicon-search"></i>
                                     </button>
+                                    <div id="restaurantImg"></div>
                                 </span>
                             </div>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
