Implemented GooglePlace API Call, Need to Adjust Loop

--- a/main.html
+++ b/main.html
@@ -63,7 +63,8 @@
                                     </button>
                                 </span>
                             </div>
-                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1" id="restaurantImg">  TEST
+                            </div>
                         </div>
                     </div>
                 </div>
