Adjusted Div for Temporary Display on main.html

--- a/main.html
+++ b/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8">
     <title>Foupon</title>
@@ -61,11 +60,12 @@
                                     <button class="btn btn-info btn-lg" type="button" id="submitButton">
                                           <i class="glyphicon glyphicon-search"></i>
                                     </button>
+
                                 </span>
                             </div>
-                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1" id="restaurantImg">  TEST
-                            </div>
+                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
                         </div>
+                        <div id="restaurantImg"></div>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-1"></div>
