Adjusted HTML Main with Like/Dislike button, and JS to support functionality

--- a/main.html
+++ b/main.html
@@ -66,7 +66,15 @@
                             </div>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
                         </div>
-                        <div id="restaurantImg"></div>
+                        <div id="restaurantDiv">
+                        </div>
+                        <button class="btn btn-info btn-lg" type="button" id="disLikeButton">
+                                <i class="glyphicon glyphicon-thumbs-down"></i>
+                        </button>
+                        <button class="btn btn-info btn-lg" type="button" id="likeButton">
+                                <i class="glyphicon glyphicon-thumbs-up"></i>
+                          </button>
+
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-1"></div>
