--- a/main.html
+++ b/main.html
@@ -68,10 +68,10 @@
                         </div>
                         <div id="restaurantDiv">
                         </div>
-                        <button class="btn btn-info btn-lg" type="button" id="disLikeButton">
+                        <button class="btn btn-info btn-lg decision" type="button" id="disLikeButton">
                                 <i class="glyphicon glyphicon-thumbs-down"></i>
                         </button>
-                        <button class="btn btn-info btn-lg" type="button" id="likeButton">
+                        <button class="btn btn-info btn-lg decision" type="button" id="likeButton">
                                 <i class="glyphicon glyphicon-thumbs-up"></i>
                           </button>
 
