--- a/main.html
+++ b/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8">
     <title>Foupon</title>
@@ -47,25 +46,35 @@
                             <div class="input-group col-lg-12 col-md-10 col-sm-10 col-xs-10">
                                 <input type="text" class="form-control input-lg" id="search-input" placeholder="burritos, cheap food, Tony's" />
                                 <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default dropdown-toggle as-is bs-dropdown-to-select" data-toggle="dropdown">
+                                  <input type="text" class="form-control input-lg" id="city-input" placeholder="City" />
+                                    <!-- <button type="button" class="btn btn-default dropdown-toggle as-is bs-dropdown-to-select" data-toggle="dropdown">
                                         <span data-bind="bs-drp-sel-label">Select...</span>
                                         <input type="hidden" name="selected_value" data-bind="bs-drp-sel-value" value="">
                                         <span class="caret"></span>
                                         <span class="sr-only">Toggle Dropdown</span>
                                     </button>
-                                    <ul class="dropdown-menu" role="menu" style="">
+                                    <ul class="dropdown-menu" role="menu" style="" onchange="selectCity()">
                                         <li data-value="1"><a href="#">San Diego</a></li>
                                         <li data-value="2"><a href="#">Los Angeles</a></li>
                                         <li data-value="3"><a href="#">San Francisco</a></li>
-                                    </ul>
+                                    </ul> -->
                                     <button class="btn btn-info btn-lg" type="button" id="submitButton">
                                           <i class="glyphicon glyphicon-search"></i>
                                     </button>
-                                    <div id="restaurantImg"></div>
+
                                 </span>
                             </div>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
                         </div>
+                        <div id="restaurantDiv">
+                        </div>
+                        <button class="btn btn-info btn-lg decision" type="button" id="disLikeButton">
+                                <i class="glyphicon glyphicon-thumbs-down"></i>
+                        </button>
+                        <button class="btn btn-info btn-lg decision" type="button" id="likeButton">
+                                <i class="glyphicon glyphicon-thumbs-up"></i>
+                          </button>
+
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-1"></div>
