--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
                         </div>
                         <div id="restaurantDiv">
                         </div>
-                        <button class="btn btn-info btn-lg decision" type="button" id="disLikeButton">
+                        <button class="btn btn-info btn-lg decision" type="button" id="dislikeButton">
                                 <i class="glyphicon glyphicon-thumbs-down"></i>
                         </button>
                         <button class="btn btn-info btn-lg decision" type="button" id="likeButton">
