--- a/login.html
+++ b/login.html
@@ -41,6 +41,7 @@
                         <li><a href="main.html">Search</a></li>
                         <li><a href="login.html">Login</a></li>
                         <li><a href="#" id="logout-user">Logout</a></li>
+
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -52,17 +53,17 @@
                 <div class="col-md-4 col-sm-3 col-xs-1"></div>
                 <div id="main-content" class="col-md-4 col-sm-6 col-xs-10">
                     <form class="form-signin">
-                        <h2 class="form-signin-heading">Please sign in</h2>
+                        <h2 class="form-signin-heading">Login</h2>
                         <label for="inputEmail" class="sr-only">Email address</label>
-                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                        <input type="email" id="loginEmail" class="form-control" placeholder="Email address" required autofocus>
                         <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                        <input type="password" id="loginPassword" class="form-control" placeholder="Password" required>
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div>
-                        <button class=" sign-in btn btn-lg btn-primary btn-block" id="add-user" type="submit">Sign in</button>
+                        <button class=" sign-in btn btn-lg btn-primary btn-block" id="login-user" type="submit">Sign in</button>
                     </form>
                 </div>
             </div>
