--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- style link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
     <body>
@@ -69,5 +70,7 @@
                 <div class="col-md-2 col-sm-2 col-xs-1"></div>
             </div>
         </div>
+    <script src="assets/javascript/config.js"></script>
+    <script src="assets/javascript/firebase_app.js"></script>
     <script src="assets/javascript/app.js"></script>
     </body>
