--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <!-- style link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js">
 </head>
 
 <body>
@@ -76,5 +77,7 @@
             <div class="col-md-2 col-sm-2 col-xs-1"></div>
         </div>
     </div>
+    <script src="assets/javascript/config.js"></script>
+    <script src="assets/javascript/firebase_app.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
