--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- style link -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
@@ -31,9 +32,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="profile.html">Profile</a></li>
                         <li><a href="main.html">Search</a></li>
+                        <li><a id="logout" href="index.html">Logout</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -76,5 +77,7 @@
             <div class="col-md-2 col-sm-2 col-xs-1"></div>
         </div>
     </div>
+
+    <script src="assets/javascript/firebase.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
