Updates from branch kole

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 </head>
 
 <body>
@@ -75,10 +74,9 @@
                 </div>
             </div>
             <div id="spacer" class="col-md-4 col-md-3 col-xs-1"></div>
-
+        <!-- </div> -->
+    <!-- </div> -->
     </div>
-
-    <script src="assets/javascript/config.js"></script>
     <script src="assets/javascript/firebase.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
